--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Spotify</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
+    <link rel="stylesheet" href="./src/styles/reset.css">
     <!-- Links para trazer os ícones via CDN -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/fontawesome.css"/>
@@ -17,7 +17,7 @@
             <div class="logo">
                 <a href="">
                     <!--O ponto inicial antes da barra serve para "sair" do arquivo e entra no destino após a barra-->
-                    <img src="./assets/icons/logo-spotify.png" alt="logo do Spotify">
+                    <img src="./src/assets/icons/logo-spotify.png" alt="logo do Spotify">
                 </a>
             </div>
                 <ul>
